project upgrade to spring boot v3.4.1